--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-python-telegram-bot
-flask
+python-telegram-bot==20.7
+pymongo==4.6.1
+dnspython==2.4.2
+Flask==3.0.0
+gunicorn==21.2.0
+certifi==2024.2.2
